# ros2-qt-package-creator

./: CHANGELOG.md  LICENSE  readme.md  setup.bash
template/: CMakeLists.txt  README.md  package.xml
template/console/: CMakeLists.txt  package.xml
template/console/src/: main.cpp  mainnode.cpp  mainnode.h
template/src/: mainwindow.cpp  mainwindow.h
template/widget/: CMakeLists.txt
template/widget/src/: mainwindow.ui
